# twitter_aggregate_generator

./: ExInCLI.py  README.md  README.txt  config_tools.py  infoCLI.py  infoMOD.py  likes.py  pyproject.toml  raw_list.txt  setup.py
coreinfo/: config_tools.py  main.py  tweet_timeline.py  user_follows.py  user_profile.py
io/: followers.txt  following.txt  likes.txt  raw_list.txt  testfile.txt  timeline.txt  tweet_id_list.txt  tweets.txt  user_id_list.txt  user_profiles.txt  usernamelist.txt
twitterag/: HELP.txt  __main__.py  config_tools.py  infocli   infocli.py  likes.py  main.py  tweet_lookup.py  tweet_timeline.py  user_follows.py  user_profile.py
twitterag/coreinfo/: config_tools.py  likes.py  tweet_lookup.py  tweet_timeline.py  user_follows.py  user_profile.py
twitterag/exceptions/: auth_except.py
twitterag/stream/: strip.py
