[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Twitter Aggregate Generator"
version = "1.0.0"
authors = [{name="Branden Kunkel", email="kunkel.branden6130@gmail.com"}]
description = "A shell to interface with the official Twitter API to gather mass amounts of data."
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = 	[
			"Programming Language :: Python :: 3.8",
			"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
			"Operating System :: POSIX :: Linux"				
		]

[project.urls]
"https://github.com/Branden-Kunkel/twitter_aggregate_generator/blob/master/LICENSE/COPYING.txt"
