[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.1.0"
name = "Twitter_Aggregate_Generator"
authors = [{name="Branden Kunkel", email="kunkel.branden6130@gmail.com"}]
dependencies = ["certifi==2022.9.24",
		"charset-normalizer==2.1.1",
		"idna==3.4",
		"requests==2.28.1",
		"urllib3==1.26.13"
		]
requires-python = ">=3.8"
classifiers = 	[
			"Development Status :: 4 - Beta",
			"Intended Audience :: Science/Research",
			"Intended Audience :: Education",
			"Intended Audience :: Developers",
			"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
			"Natural Language :: English",
			"Operating System :: POSIX :: Linux",
			"Programming Language :: Python :: 3.8",		
		]
readme = "README.md"

[project.urls]
homepage = "https://github.com/Branden-Kunkel/twitter_aggregate_generator"

[tool.setuptools]
packages = ["twitterag"]
 

